[BSK-1734] make sure that highlighted search text is readable in HTML dark mode
Former-commit-id: 38f483f87629311d53ab0c8257465512edf27440
Former-commit-id: c82aef2ad76b7001d6498d371f1e294f915bdfef

--- a/docs/source/_static/css/custom.css
+++ b/docs/source/_static/css/custom.css
@@ -169,4 +169,8 @@ code, .rst-content tt, .rst-content code {
 	td.linenos pre {
 	    background: #ccc !important;
 	}
+	
+	.rst-content .highlighted {
+		background-color: #333;
+	}
 }
